syntax = "proto3";
package response;
option go_package = "douyin/proto/message/response";

message douyin_message_chat_response {
  repeated Message message_list = 1;
  int32 code = 2;
}

message douyin_message_action_response {
  int32 code = 2;
}

message Message {
  int64 id = 1;
  string content = 2;
  int64 create_time = 3;
  int64 to_user_id = 4;
  int64 from_user_id = 5;
}

message douyin_get_user_friend_message_response {
  int32 code = 2;
  repeated string message = 3;
  repeated int64 msgType = 4;
}